force-app/main/default/objects/Integration_Endpoint__c/Integration_Endpoint__c.object-meta.xml
<CustomObject>
    <label>Integration Endpoint</label>
    <pluralLabel>Integration Endpoints</pluralLabel>
    <nameField>
        <label>API Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Registry of all monitored integration endpoints in SentinelFlow.</description>
</CustomObject>