force-app/main/default/objects/Integration_Endpoint__c/fields/Circuit_Status__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Status__c</fullName>
    <label>Circuit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Closed</fullName><default>true</default><label>Closed (Normal)</label></value>
            <value><fullName>Open</fullName><default>false</default><label>Open (Tripped)</label></value>
            <value><fullName>Half-Open</fullName><default>false</default><label>Half-Open (Testing)</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Circuit breaker state. Open = endpoint is paused, Closed = normal, Half-Open = recovery test.</description>
</CustomField>