force-app/main/default/objects/Integration_Endpoint__c/fields/Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Count__c</fullName>
    <label>Failure Count</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rolling count of consecutive failures. Used by circuit breaker logic.</description>
</CustomField>