force-app/main/default/objects/Integration_Endpoint__c/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <label>Max Retries</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>3</defaultValue>
</CustomField>