force-app/main/default/objects/Integration_Endpoint__c/fields/Retry_Policy__c.field-meta.xml
<CustomField>
    <fullName>Retry_Policy__c</fullName>
    <label>Retry Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Immediate</fullName><default>true</default><label>Immediate</label></value>
            <value><fullName>Exponential Backoff</fullName><default>false</default><label>Exponential Backoff</label></value>
            <value><fullName>No Retry</fullName><default>false</default><label>No Retry</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>