force-app/main/default/objects/Integration_Endpoint__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <label>Tenant</label>
    <type>Lookup</type>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipName>Integration_Endpoints</relationshipName>
    <relationshipLabel>Integration Endpoints</relationshipLabel>
</CustomField>